Use my_datasetName for Checklist title

--- a/src/dwc_mapping.Rmd
+++ b/src/dwc_mapping.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "Darwin Core mapping"
-subtitle: "For: Checklist title"
+subtitle: "For: my_datasetName"
 author:
 - author_1
 - author_2
