Use here for distribution extension as well

--- a/src/dwc_mapping.Rmd
+++ b/src/dwc_mapping.Rmd
@@ -450,5 +450,5 @@ distribution %>% head()
 Save to CSV:
 
 ```{r}
-write.csv(distribution, file = "../data/processed/distribution.csv", na = "", row.names = FALSE, fileEncoding = "UTF-8")
+write.csv(distribution, file = here("data", "processed", "distribution.csv"), na = "", row.names = FALSE, fileEncoding = "UTF-8")
 ```
