Be more specific about static fields

--- a/src/dwc_mapping.Rmd
+++ b/src/dwc_mapping.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "Darwin Core mapping"
-subtitle: "For: my_datasetName"
+subtitle: "For: my_dataset_title"
 author:
 - author_1
 - author_2
@@ -122,7 +122,7 @@ To link taxa with information in the extension(s), each taxon needs a unique and
 ```{r}
 vdigest <- Vectorize(digest) # Vectorize digest function to work with vectors
 input_data %<>% mutate(input_taxon_id = paste(
-  "my_dataset_shortname", # Update with your dataset shortname, e.g. "alien-fishes-checklist"
+  "my_dataset_shortname", # e.g. "alien-fishes-checklist"
   "taxon",
   vdigest(paste(input_scientific_name, input_kingdom), algo = "md5"),
   sep = ":"
@@ -178,25 +178,25 @@ taxon %<>% mutate(license = "my_license") # e.g. "http://creativecommons.org/pub
 ### rightsHolder
 
 ```{r}
-taxon %<>% mutate(rightsHolder = "my_rightsHolder") # e.g. "INBO"
+taxon %<>% mutate(rightsHolder = "my_rights_holder") # e.g. "INBO"
 ```
 
 ### datasetID
 
 ```{r}
-taxon %<>% mutate(datasetID = "my_datasetID") # e.g. "https://doi.org/10.15468/xvuzfh"
+taxon %<>% mutate(datasetID = "my_dataset_doi") # e.g. "https://doi.org/10.15468/xvuzfh"
 ```
 
 ### institutionCode
 
 ```{r}
-taxon %<>% mutate(institutionCode = "my_institutionCode") # e.g. "INBO"
+taxon %<>% mutate(institutionCode = "my_institution_code") # e.g. "INBO"
 ```
 
 ### datasetName
 
 ```{r}
-taxon %<>% mutate(datasetName = "my_datasetName") # e.g. "Checklist of non-native freshwater fishes in Flanders, Belgium"
+taxon %<>% mutate(datasetName = "my_dataset_title") # e.g. "Checklist of non-native freshwater fishes in Flanders, Belgium"
 ```
 
 The following terms contain information about the taxon:
