Add option to knit to pdf

--- a/src/dwc_mapping.Rmd
+++ b/src/dwc_mapping.Rmd
@@ -7,11 +7,16 @@ author:
 date: "`r Sys.Date()`"
 output:
   html_document:
-    toc: true
-    toc_depth: 3
-    toc_float: true
-    number_sections: true
     df_print: paged
+    number_sections: yes
+    toc: yes
+    toc_depth: 3
+    toc_float: yes
+  pdf_document:
+    df_print: kable
+    number_sections: yes
+    toc: yes
+    toc_depth: 3
 ---
 
 # Setup 
