Add example for nomenclaturalCode

--- a/src/dwc_mapping.Rmd
+++ b/src/dwc_mapping.Rmd
@@ -264,7 +264,7 @@ taxon %>%
 ### nomenclaturalCode
 
 ```{r}
-taxon %<>% mutate(nomenclaturalCode = "my_nomenclaturalCode")
+taxon %<>% mutate(nomenclaturalCode = "my_nomenclaturalCode") # e.g. "ICZN"
 ```
 
 ### post-processing
