Minor update to setup

--- a/src/dwc_mapping.Rmd
+++ b/src/dwc_mapping.Rmd
@@ -21,14 +21,14 @@ output:
 
 # Setup 
 
-```{r setup, echo = FALSE}
+```{r setup, include = FALSE}
 knitr::opts_chunk$set(echo = TRUE, warning = FALSE, message = FALSE)
 ```
 
 Load libraries:
 
 ```{r}
-library(tidyverse)      # To transform data
+library(tidyverse)      # To do data science
 library(magrittr)       # To use %<>% pipes
 library(here)           # To find files
 library(janitor)        # To clean input data
