Use write_csv instead of write.csv
It is faster and removes unnecessary double quotes

--- a/src/dwc_mapping.Rmd
+++ b/src/dwc_mapping.Rmd
@@ -286,7 +286,7 @@ taxon %>% head()
 Save to CSV:
 
 ```{r}
-write.csv(taxon, file = here("data", "processed", "taxon.csv"), na = "", row.names = FALSE, fileEncoding = "UTF-8")
+write_csv(taxon, here("data", "processed", "taxon.csv"), na = "")
 ```
 
 # Distribution extension
@@ -450,5 +450,5 @@ distribution %>% head()
 Save to CSV:
 
 ```{r}
-write.csv(distribution, file = here("data", "processed", "distribution.csv"), na = "", row.names = FALSE, fileEncoding = "UTF-8")
+write_csv(distribution, here("data", "processed", "distribution.csv"), na = "")
 ```
