Use str_remove to get rid of dwc_ prefix
Cf. https://github.com/inbo/sovon/issues/48#issuecomment-470042609

--- a/src/dwc_mapping.Rmd
+++ b/src/dwc_mapping.Rmd
@@ -273,7 +273,7 @@ taxon %<>% select(starts_with("dwc_"))
 Drop the `dwc_` prefix:
 
 ```{r}
-colnames(taxon) <- str_replace(colnames(taxon), "dwc_", "")
+colnames(taxon) <- str_remove(colnames(taxon), "dwc_")
 ```
 
 Preview data:
@@ -443,7 +443,7 @@ distribution %<>% select(starts_with("dwc_"))
 Drop the `dwc_` prefix:
 
 ```{r}
-colnames(distribution) <- str_replace(colnames(distribution), "dwc_", "")
+colnames(distribution) <- str_remove(colnames(distribution), "dwc_")
 ```
 
 Preview data:
