--- a/src/dwc_mapping.Rmd
+++ b/src/dwc_mapping.Rmd
@@ -106,6 +106,7 @@ The nameparser function also provides information about the rank of the taxon (i
 
 ```{r}
 input_data %<>% left_join(
+  parsed_names %>%
   select(parsed_names, scientificname, rankmarker),
   by = c("scientific_name" = "scientificname"))
 ```
