Change message value for chunk evaluation
This let us to see output of tidylog

--- a/src/dwc_mapping.Rmd
+++ b/src/dwc_mapping.Rmd
@@ -22,12 +22,12 @@ output:
 # Setup 
 
 ```{r setup, include = FALSE}
-knitr::opts_chunk$set(echo = TRUE, warning = FALSE, message = FALSE)
+knitr::opts_chunk$set(echo = TRUE, warning = FALSE, message = TRUE)
 ```
 
 Load libraries:
 
-```{r}
+```{r message = FALSE}
 library(tidyverse)      # To do data science
 library(tidylog)        # To provide feedback on dplyr functions
 library(magrittr)       # To use %<>% pipes
